# NIDS

./: .gitattributes  .gitignore  .pylintrc  CODEOWNERS  CONTRIBUTING.md  README.md  USERGUIDE.md  bun.lockb  compose.yml  dvc.yaml  hello.py  package-lock.json  package.json  pyproject.toml  pytest.ini  setup.py  turbo.json
.devcontainer/: dev.env  packages.txt  python.env  requirements-cpu.in  requirements-cpu.txt  requirements-minimal.txt  requirements.in  requirements.txt
.devcontainer/cpu/: devcontainer.json
.devcontainer/gpu/: .disabled.devcontainer.json  devcontainer.json
.devcontainer/local/: devcontainer.json
.devcontainer/machine-learning/: devcontainer.json
.devcontainer/python/: devcontainer.json
.devcontainer/typescript/: devcontainer.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  dev
deploy/: Dockerfile-torch.base  Dockerfile.base  compose.yml  requirements.in  requirements.txt
docs/: CNAME  CONTRIBUTING.md  Component.excalidraw  Program.excalidraw  USERGUIDE.md  docker.md  git.md  ruff.md  setup.md
dvclive/: class_map.json  metrics-v1.json  metrics.json  params.yaml
scripts/: deploy.sh  display.py  gen_corrected_cicids2017.sh  gen_test_csv.py  get_data.sh  install.sh  restart.sh  setup_common.sh  setup_dev.sh  setup_devcontainer.sh  setup_git.sh  setup_gui.sh  setup_guidev.sh  setup_local_registry.sh  setup_network.sh  setup_pydev.sh  setup_tsdev.sh  start_common.sh  start_services.sh  uninstall.sh  update_deps.sh  update_docker_daemon.py  update_registry.sh
sdk/: README.md  compose.yml
tests/: conftest.py
(+264 files in other folders)
