[project]
name = "nids"
version = "0.0.2"
description = "Real-Time Network Intrusion Detection, Monitoring, and Analysis Framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.9.4",
    "textual>=1.0.0",
]

[tool.ruff]
line-length = 88
fix = true

exclude = [
    "src/grpc_",
    "src/ai",
    "tests"
]

[tool.ruff.lint]
per-file-ignores = {"src/services/feeder/feeder.py" = ["E501"], "sdk/services/example/main.py" = ["F401"]}
select = ["E4", "E7", "E9", "F", "B", "R", "C", "E", "W", "I"]
external = ["isort"]

unfixable = ["B"]
fixable = ["I"]
